Fix cli outputing to the wrong directory